--- a/package.json
+++ b/package.json
@@ -38,8 +38,10 @@
   },
   "dependencies": {
     "axios": "^0.17.1",
+    "echarts": "^3.8.5",
     "express": "^4.16.2",
     "moment": "^2.19.4",
-    "superstruct": "^0.4.11"
+    "superstruct": "^0.4.11",
+    "voca": "^1.3.1"
   }
 }
