--- a/package.json
+++ b/package.json
@@ -4,7 +4,7 @@
   "description": "Bloomberg watchlist clone for cryptocurrencies",
   "main": "index.js",
   "scripts": {
-    "start": "parcel index.html",
+    "start": "parcel app.js",
     "test": "xo && nyc ava --verbose"
   },
   "repository": {
@@ -41,6 +41,7 @@
     "axios": "^0.17.1",
     "echarts": "^3.8.5",
     "express": "^4.16.2",
+    "mavo": "^0.1.4",
     "moment": "^2.19.4",
     "superstruct": "^0.4.11",
     "voca": "^1.3.1"
