--- a/package.json
+++ b/package.json
@@ -18,9 +18,12 @@
   },
   "homepage": "https://github.com/mycaule/portfolio#readme",
   "devDependencies": {
+    "autoprefixer": "^7.2.3",
     "ava": "^0.24.0",
+    "babel-preset-env": "^1.6.1",
     "nyc": "^11.3.0",
     "parcel-bundler": "^1.2.0",
+    "postcss-modules": "^1.1.0",
     "xo": "^0.18.2"
   },
   "xo": {
