--- a/package.json
+++ b/package.json
@@ -42,10 +42,8 @@
   "dependencies": {
     "axios": "^0.17.1",
     "echarts": "^3.8.5",
-    "jsep": "^0.3.3",
     "mavo": "^0.1.4",
     "moment": "^2.20.0",
-    "superstruct": "^0.4.11",
-    "voca": "^1.3.1"
+    "superstruct": "^0.4.11"
   }
 }
