--- a/package.json
+++ b/package.json
@@ -20,7 +20,10 @@
   "devDependencies": {
     "autoprefixer": "^7.2.3",
     "ava": "^0.24.0",
+    "babel-plugin-transform-runtime": "^6.23.0",
+    "babel-polyfill": "^6.26.0",
     "babel-preset-env": "^1.6.1",
+    "babel-runtime": "^6.26.0",
     "parcel-bundler": "^1.2.0",
     "postcss-modules": "^1.1.0",
     "xo": "^0.18.2"
@@ -37,6 +40,10 @@
     ]
   },
   "ava": {
+    "require": [
+      "babel-register"
+    ],
+    "babel": "inherit",
     "snapshotDir": "snapshots"
   },
   "dependencies": {
