--- a/package.json
+++ b/package.json
@@ -27,6 +27,7 @@
     "jsep": "^0.3.3",
     "parcel-bundler": "^1.2.0",
     "postcss-modules": "^1.1.0",
+    "rss-parser": "^2.11.0",
     "xo": "^0.18.2"
   },
   "xo": {
