--- a/package.json
+++ b/package.json
@@ -53,5 +53,8 @@
     "echarts": "^3.8.5",
     "superstruct": "^0.5.0",
     "voca": "^1.3.1"
+  },
+  "optionalDependencies": {
+    "bufferutil": "^3.0.3"
   }
 }
