--- a/package.json
+++ b/package.json
@@ -52,9 +52,11 @@
     "date-fns": "^1.29.0",
     "echarts": "^3.8.5",
     "superstruct": "^0.5.0",
-    "voca": "^1.3.1"
+    "voca": "^1.3.1",
+    "ws": "^3.3.3"
   },
   "optionalDependencies": {
-    "bufferutil": "^3.0.3"
+    "bufferutil": "^3.0.3",
+    "utf-8-validate": "^4.0.0"
   }
 }
