--- a/package.json
+++ b/package.json
@@ -25,7 +25,9 @@
     "babel-preset-env": "^1.6.1",
     "babel-runtime": "^6.26.0",
     "jsep": "^0.3.3",
+    "node-sass": "^4.7.2",
     "parcel-bundler": "^1.2.0",
+    "parcel-plugin-vue": "^1.4.0",
     "postcss-modules": "^1.1.0",
     "xo": "^0.18.2"
   },
@@ -53,6 +55,7 @@
     "echarts": "^3.8.5",
     "superstruct": "^0.5.0",
     "voca": "^1.3.1",
+    "vue": "^2.5.13",
     "ws": "^3.3.3"
   },
   "optionalDependencies": {
